--- a/styles.css
+++ b/styles.css
@@ -27,15 +27,25 @@ body {
     margin: 20px;
     color: white;
     display: inline-block;
+    padding: 10px 15px;
+    border-radius: 4px;
 }
 
 .btn-in-game {
+    background-color: rgb(83, 83, 83);
+}
+
+.btn-in-game:hover {
     background-color: grey;
 }
 
 .play-again {
     background-color: red;
     animation: bounce 1s infinite;
+}
+
+.play-again:hover {
+    background-color: rgb(107, 4, 4);
 }
 
 @keyframes bounce {
