--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,14 @@ img {
     border-bottom-right-radius: 4px;
 }
 
+.incorrect {
+    background-color: red;
+    margin-bottom: 0;
+    padding: 10px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
 /* -------- tryAgain() classes --------- */
 
 .blur {
